--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </a>
       </div>
       <div class="hero-image">
-        <img src="images/app-mockup.png" alt="App Screenshot">
+        <img src="images/Screenshot_20251022_223858.jpg" alt="Screenshot">
       </div>
     </div>
   </section>
@@ -69,4 +69,5 @@
     </div>
   </footer>
 </body>
+
 </html>
